# image2xlsx

./: Cargo.toml  README.md
crates/image2xlsx/: Cargo.toml
crates/image2xlsx-cli/: Cargo.toml
crates/image2xlsx-cli/src/: main.rs
crates/image2xlsx-lambda/: Cargo.toml
crates/image2xlsx-wasm/: Cargo.toml
crates/image2xlsx-wasm/frontend/: index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
crates/image2xlsx-wasm/frontend/src/: index.ts
crates/image2xlsx-wasm/src/: lib.rs
crates/image2xlsx-wasm/terraform/: .gitignore  acm.tf  cloudfront.tf  main.tf  route53.tf  s3.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
crates/image2xlsx/src/: lib.rs
frontend/: index.html
