[package]
name = "image2xlsx-wasm"
description = "WebAssembly module for image2xlsx"
authors.workspace = true
edition.workspace = true
version.workspace = true

homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.dev]
debug = 2

[profile.release]
opt-level = "s"

[dependencies]
rust_xlsxwriter = { version = "0.89.0", features = ["wasm"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.64"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
